--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Grounded-SAM-2"]
-	path = Grounded-SAM-2
+[submodule "grounded_sam_2"]
+	path = grounded_sam_2
 	url = https://github.com/IDEA-Research/Grounded-SAM-2.git
